Add config for lamp fuel amounts